# nonebot_plugin_msg_summary

./: README.md  pyproject.toml  test.py
.github/workflows/: python-publish.yml
nonebot_plugin_msg_summary/: Config.py  __init__.py
