[project]
name = "nonebot-plugin-msg-summary"
version = "0.3.3"
authors = [{ name = "3000y", email = "821923589@qq.com" }]
description = "基于Nonebot2，使用AI分析群聊记录，生成讨论内容的总结。"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat",
]
keywords = ["nonebot2", "nonebot", "plugin", "summary", "gpt","ai", "group-chat"]
dependencies = ["httpx", "nonebot-adapter-onebot", "nonebot2", "pydantic"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/lfhy/nonebot_plugin_msg_summary"
